HDL ANT Deployment Package/retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <defaultValue>23</defaultValue>
        <description>Retail or Wellness Account</description>
        <inlineHelpText>Retail = 18
Wellness = 23</inlineHelpText>
        <label>Account Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Accounts with Opportunities are Active Accounts</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Testing__c</fullName>
        <inlineHelpText>Do you currently perform advanced testing for cardiac disease, diabetes, metabolic syndrome or fatty liver disease?</inlineHelpText>
        <label>Advanced Testing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>After_hours_Critical_Results_Notificatio__c</fullName>
        <label>After-hours Critical Result Notification</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>After_hours_notification_number__c</fullName>
        <label>After-hours notification number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>All_P_H_Agreements_Signed__c</fullName>
        <label>All P&amp;H Agreements Signed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <label>Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Blood_draw_location_if_offsite__c</fullName>
        <label>Blood draw location if offsite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_ID__c</fullName>
        <formula>If(ISPICKVAL(Channel_of_Origin__c, &quot;Wellness&quot;), &quot;23&quot;,
If(ISPICKVAL(Channel_of_Origin__c, &quot;Retail&quot;), &quot;18&quot;,
If(ISPICKVAL(Channel_of_Origin__c, &quot;International&quot;), &quot;TBD&quot;,
If(ISPICKVAL(Channel_of_Origin__c, &quot;Clinical trial&quot;), &quot;TBD&quot;,
null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel_of_Origin__c</fullName>
        <label>Channel of Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_ID_New__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>BillingState  &amp; &quot;-&quot; &amp; &quot;zip code&quot; &amp;&quot;-&quot; &amp;  Order_Account_Added__c</formula>
        <label>Client ID#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copia_Unique_ID__c</fullName>
        <label>Copia Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Lab__c</fullName>
        <inlineHelpText>What lab are you currently sending samples to?</inlineHelpText>
        <label>Current Lab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Process_Notes__c</fullName>
        <inlineHelpText>How are things going with your current process?</inlineHelpText>
        <label>Current Process Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Year_Gift_Total__c</fullName>
        <label>Current Year Gift Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Customer_Unique_ID__c</fullName>
        <label>GP Customer Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GP_Vendor_Unique_ID__c</fullName>
        <label>GP Vendor Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HDL_Owned__c</fullName>
        <label>HDL Owned</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Harvest_Unique_ID__c</fullName>
        <label>Harvest Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_per_week__c</fullName>
        <label>If yes, how many per week?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Service_Date__c</fullName>
        <label>In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Supply_Order_Required_by__c</fullName>
        <label>Initial Supply Order Required by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lab_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lab Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Lab Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Order_Summary__c</fullName>
        <label>Last Order Summary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Motivation_for_Wellness__c</fullName>
        <label>Motivation for Wellness?</label>
        <picklist>
            <picklistValues>
                <fullName>Population Health</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obesity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weight loss program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Blood Pressure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Insurance costs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Physicians_in_Practice__c</fullName>
        <label>Number of Physicians in Practice</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Signed_Pilots__c</fullName>
        <label>Number of Signed Pilots</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pilot</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Signed Contract, Account Setup, Input Checklist, Pilot Program, Pilot Complete, Program Launch, Draw in Progress, Reporting, Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Signed_Programs__c</fullName>
        <label>Number of Signed Programs</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Program</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office_Manager_Name__c</fullName>
        <label>Office Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Manager_Phone__c</fullName>
        <label>Office Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Onboarded_Date__c</fullName>
        <label>Onboarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Online_Setup_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Setup Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Account_Added__c</fullName>
        <description>This number represents the the order in which the account was added.  This number will make up the last seven digits of the Client ID#.</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Order Account was Added</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>P_H_Agreement_Notes__c</fullName>
        <label>P&amp;H Agreement Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P_H_Scenario__c</fullName>
        <label>P&amp;H Scenario</label>
        <picklist>
            <picklistValues>
                <fullName>Pay to Practice (EIN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay to Provider by Provider (SSN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay to Practice Split by Provider (EIN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay to Provider by Provider Entity (EIN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay to Employee by (SSN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay to Drawsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Claims_Info__c</fullName>
        <label>Past Claims Info?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phlebotomy_Location__c</fullName>
        <label>Phlebotomy Location</label>
        <picklist>
            <picklistValues>
                <fullName>In Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offsite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physician_Name__c</fullName>
        <label>Physician Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_on_Staff__c</fullName>
        <label>Physician on Staff?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pratice_type__c</fullName>
        <label>Pratice type</label>
        <picklist>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Private_practice_or_hospital_owned__c</fullName>
        <label>Private practice or hospital owned?</label>
        <picklist>
            <picklistValues>
                <fullName>Private Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Owned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Results_Delivery_Method__c</fullName>
        <label>Results Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>FedEx Overnight (2 color copies)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx Overnight (1 color copy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Results_Fax__c</fullName>
        <label>Results Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <description>This field indicates who will be receiving sales credit for samples assigned to this account.</description>
        <label>Sales Team</label>
        <picklist>
            <picklistValues>
                <fullName>Brad/Rich/Burt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cal/Tony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casey/Paul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kyle/Emily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lee/Jerry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Supplies_To__c</fullName>
        <label>Send Supplies To</label>
        <picklist>
            <picklistValues>
                <fullName>Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiac Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phlebotomist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>W_9_Notes__c</fullName>
        <label>W-9 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>W_9_Received__c</fullName>
        <label>W-9 Received?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See Notes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_draws_blood__c</fullName>
        <label>Who draws blood?</label>
        <picklist>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>Draw_Site</fullName>
        <active>true</active>
        <description>Used to create Draw Site Accounts</description>
        <label>Draw Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <description>Used to create Practice Accounts</description>
        <label>Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategic_Initiatives</fullName>
        <active>true</active>
        <description>Used to create Strategic Initiatives Accounts</description>
        <label>Strategic Initiatives</label>
    </recordTypes>
    <validationRules>
        <fullName>Account_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Not(ISNEW()),ISBLANK( Account_Type__c ))</errorConditionFormula>
        <errorDisplayField>Account_Type__c</errorDisplayField>
        <errorMessage>Account Type is required to save this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Online_Setup_Contact_Required</fullName>
        <active>true</active>
        <description>required if Results Delivery Method = Online</description>
        <errorConditionFormula>AND(ISPICKVAL(Results_Delivery_Method__c , &quot;Online&quot;),  ISBLANK(Online_Setup_Contact__c ))</errorConditionFormula>
        <errorDisplayField>Online_Setup_Contact__c</errorDisplayField>
        <errorMessage>Because result delivery method is Online, must enter a Online setup contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Physician_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()),ISPICKVAL(Physician_on_Staff__c, &quot;Yes&quot;), ISBLANK(Physician_Name__c))</errorConditionFormula>
        <errorDisplayField>Physician_Name__c</errorDisplayField>
        <errorMessage>Physician Name is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Results_Fax_Required</fullName>
        <active>true</active>
        <description>required if Results Delivery Method = Fax</description>
        <errorConditionFormula>AND(ISPICKVAL(Results_Delivery_Method__c , &quot;Fax&quot;),  ISBLANK( Results_Fax__c ))</errorConditionFormula>
        <errorDisplayField>Results_Fax__c</errorDisplayField>
        <errorMessage>Because result delivery method is Fax, must enter a Result Fax</errorMessage>
    </validationRules>
</CustomObject>